# wordle_ai

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
src/: __init__.py  main.py
src/analytics/: __init__.py  difficulty_prediction.py  game_theory.py  statistics.py  strategy_comparison.py
src/data/: __init__.py  patterns.py  words.py
src/ml/: __init__.py  adaptive_learning.py  features.py  models.py  neural_models.py  performance_optimization.py  prediction.py  training.py
src/solver/: __init__.py  engine.py  entropy.py  strategy.py
src/ui/: __init__.py  display.py  input.py
src/utils/: __init__.py  helpers.py
